# neu-accessible-chess-core

./: .gitignore  .gitmodules  BitBoard.h  Board.h  CMakeLists.txt  ChessEngine.cpp  ChessEngine.h  ChessPiece.h  Game.h  GameHistory.h  GameSnapshot.h  Move.h  UCI.h  main.cpp  move_computation.h  optional_extra.h  uci_parsers.h
